tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_or_pattern_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Nat {
  Zero,
  Succ(Nat)
}

let foo = (n: Nat): Boolean =>
  switch (n) {
    case Zero | Zero: true
            //  ^^^^ Error: unreachable case
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_or_pattern_3.kk:8:17
  │
8 │     case Zero | Zero: true
  │                 ^^^^ Partially unreachable case
  │
  = This case is partially unreachable because it contains a redundant pattern that is already handled by previous cases.
    Namely:

        Zero
